fix: Finaliza e corrige fluxo de autorização e registro